[style] correct padding and gap

--- a/style.css
+++ b/style.css
@@ -531,6 +531,7 @@ main {
   height: 0;
   background: var(--accent-color);
   border-radius: 50%;
+  opacity: 0.8;
   box-shadow: 0 0 1000px 50px var(--accent-color);
   z-index: -10;
   -webkit-animation: pulseMove 6s linear infinite;
@@ -572,7 +573,7 @@ main {
 /* .iframe-wrapper css */
 .iframe-wrapper {
   margin: auto;
-  margin-top: 10px;
+  margin-top: 5%;
   width: 100%;
   max-width: 800px;
   border-radius: 20px;
@@ -1740,15 +1741,15 @@ main.pages.page-not-found {
 }
 
 main.pages.page-not-found a {
- padding: 10px 20px;
- border-radius: 40px;
- background: var(--accent-gradient);
- color: var(--accent-color-white);
- transition: var(--universal-trans);
+  padding: 10px 20px;
+  border-radius: 40px;
+  background: var(--accent-gradient);
+  color: var(--accent-color-white);
+  transition: var(--universal-trans);
 }
 
 main.pages.page-not-found a:hover {
- box-shadow: var(--glowing-effect-boxshadow);
+  box-shadow: var(--glowing-effect-boxshadow);
 }
 
 /* responsive css */
